--- a/homeworks/hw6/Sien Magdalena/HW6.ipynb
+++ b/homeworks/hw6/Sien Magdalena/HW6.ipynb
@@ -1,17 +1,33 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1944d969-417c-4698-bf2c-f70a3c39455b",
+   "metadata": {},
+   "source": [
+    "# Praca domowa nr 6 Magdalena Sien"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "25dac956-325a-4999-a837-2bc2ba344c02",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
+    "import numpy as npA\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "df=pd.read_csv(\"energy_dataset_.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "973bc28a-deb5-4409-8c9b-949564948a23",
+   "metadata": {},
+   "source": [
+    "## Opis zbioru danych "
    ]
   },
   {
@@ -45,6 +61,14 @@
    ],
    "source": [
     "print(\"Zbior danych zawiera informacje nt. odnawialnych systemow energii i ma \",df.shape[0],\" wierszy oraz \",df.shape[1],\" kolumn.\\nWystepuja w nim zmienne o nastepujacych nazwach i typach:\\n\",df.dtypes,sep='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ad644b7-3f0a-4370-b202-98fff4b21607",
+   "metadata": {},
+   "source": [
+    "## Analiza zmiennych"
    ]
   },
   {
@@ -122,6 +146,14 @@
    ],
    "source": [
     "print(\"Statystyki zmiennych z ramki danych:\\n\",df.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cad00118-8488-40e1-8c65-4f09a2c01025",
+   "metadata": {},
+   "source": [
+    "## Analiza zmiennych w zależności od przynależności do grupy"
    ]
   },
   {
@@ -213,6 +245,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57899cb1-ee8e-4f0f-9f94-7788d4217b0f",
+   "metadata": {},
+   "source": [
+    "## 2 wykresy analizujące rozkład zmiennych w zbiorze danych"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "2034b2cb-5025-4fd1-868f-ef756d40facb",
@@ -301,6 +341,14 @@
     "print(\"Numerycznym wartosciom zmiennej Funding_Sources odpowiadaja nastepujace wartosci:\\n1: Government, 2: Private, 3: Public-Private Partnership.\\n\")\n",
     "plt.show()\n",
     "print(\"\\nWNIOSKI:\\nNiezależnie od zrodla finansowania zmienna dotyczaca powstalych miejsc pracy ma zbizony rozklad i podobna srednia wartosc w okolicy 2500 miejsc pracy.\\nMozna wysnuc wniosek, iz zrodlo finansowania nie wplywa na ilosc stworzonych miejsc pracy.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e74b6882-9c17-4604-aee8-9fdb8b06383a",
+   "metadata": {},
+   "source": [
+    "## 2 wykresy wskazujące zależności w zbiorze danych z wnioskami"
    ]
   },
   {
