--- a/projects/project2/Gromada_Lipinska_Markowski/README
+++ b/projects/project2/Gromada_Lipinska_Markowski/README
@@ -1,5 +1,4 @@
   Nasza analiza powstała we współpracy z WTP, który udostępnił nam dane. Naszym celem było zbadanie transportu w Warszawie. W naszym projekcie skupiliśmy się na ilości pasażerów, jak i ruchu turystycznym.
 
-<p align="center">
-  <img src="www\zdj1.png" width="350" title="hover text">
-</p>
+![](zdj1.png)
+
