--- a/projects/project2/Gromada_Lipinska_Markowski/README
+++ b/projects/project2/Gromada_Lipinska_Markowski/README
@@ -1,4 +1,5 @@
-  Nasza analiza powstała we współpracy z WTP, który udostępnił nam dane. Naszym celem było zbadanie transportu w Warszawie. W naszym projekcie skupiliśmy się na ilości pasażerów, jak i ruchu turystycznym.
+Nasza analiza powstała we współpracy z WTP, który udostępnił nam dane. Naszym celem było zbadanie transportu w Warszawie. W naszym projekcie skupiliśmy się na ilości pasażerów, jak i ruchu turystycznym.
 
 ![](zdj1.png)
+![](zdj2.png)
 
